[package]
name = "ui-sys"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
build = "build.rs"
license = "MIT/Apache 2.0"
description = "Native bindings to the minimalist, cross-platform, widget set `libui`"

[dependencies]
libc = "0.2"

[build-dependencies]
make-cmd = "0.1"
cmake = "0.1"

